refactor to not use ProjectRole